Fix for home page title on small screens

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -30,7 +30,7 @@
   padding: 0.5em 1em;
 }
 .panel .text-panel h1 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 .panel .text-panel h3 {
